# eureciclo

backend/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
backend/src/: main.py  test_main.py
backend/src/services/: amqp.py  xml_processor.py
backend/tests/: test_upload.py
bottles/: README.md  main.py
