[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Luis Guerreiro",email = "devguerreiro@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.133.1,<0.134.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
httpx = "^0.28.1"
pytest = "^9.0.2"
